@@ -1,0 +1,27 @@
+<?xml version="1.0" encoding="windows-1252"?>
+<Module>
+<ModulePrefs title="google"/>
+<Content type="html"><![CDATA[
+<!DOCTYPE html> 
+<html> 
+    <head> 
+        <style type="text/css">
+            html { overflow: auto; }
+            html, body, div, iframe { 
+                margin: 0px; padding: 0px; height: 100%; border: none; 
+            } 
+            iframe { 
+                display: block; 
+                width: 100%; 
+                border: none; 
+                overflow-y: auto; 
+                overflow-x: hidden; 
+            } 
+            </style> 
+    </head> 
+    <body> 
+        <iframe src="https://www.google.com?igu=1" frameborder="0" marginheight="0" marginwidth="0" width="100%" height="100%" scrolling="auto" id="google"></iframe>
+    </body> 
+</html>
+]]></Content>
+</Module>
