@@ -1,5 +1,2 @@
-09/18/2025:
-[+] Fixed Tomb of the Mask (Thanks for the bug report Buena)
-[+] Fixed Basketball Legends 2020. (Thanks for the bug report Buena)
-[-] Removed Basketball Stars 2019. (Might re-add later if people care too
-much)
+09/20/2025:
+[+] Added Unmonitored Google
